shell-src/y.output
Terminals unused in grammar

    NOTOKEN


Grammar

    0 $accept: goal $end

    1 goal: command_list

    2 command_list: command_line
    3             | command_list command_line

    4 command_line: pipe_list io_modifier_list background_optional NEWLINE
    5             | NEWLINE
    6             | error NEWLINE

    7 io_modifier_list: io_modifier_list io_modifier
    8                 | ε

    9 background_optional: AMPERSAND
   10                    | ε

   11 pipe_list: cmd_and_args
   12          | pipe_list PIPE cmd_and_args

   13 $@1: ε

   14 cmd_and_args: WORD $@1 arg_list

   15 arg_list: arg_list WORD
   16         | ε

   17 io_modifier: GREATGREAT WORD
   18            | GREAT WORD
   19            | GREATGREATAMPERSAND WORD
   20            | GREATAMPERSAND WORD
   21            | LESS WORD
   22            | TWOGREAT WORD
   23            | TWOGREATAMPERSANDONE


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6
    WORD <cpp_string> (258) 14 15 17 18 19 20 21 22
    NOTOKEN (259)
    GREAT (260) 18
    NEWLINE (261) 4 5 6
    GREATGREAT (262) 17
    LESS (263) 21
    PIPE (264) 12
    TWOGREAT (265) 22
    AMPERSAND (266) 9
    GREATGREATAMPERSAND (267) 19
    GREATAMPERSAND (268) 20
    TWOGREATAMPERSANDONE (269) 23


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    goal (16)
        on left: 1
        on right: 0
    command_list (17)
        on left: 2 3
        on right: 1 3
    command_line (18)
        on left: 4 5 6
        on right: 2 3
    io_modifier_list (19)
        on left: 7 8
        on right: 4 7
    background_optional (20)
        on left: 9 10
        on right: 4
    pipe_list (21)
        on left: 11 12
        on right: 4 12
    cmd_and_args (22)
        on left: 14
        on right: 11 12
    $@1 (23)
        on left: 13
        on right: 14
    arg_list (24)
        on left: 15 16
        on right: 14 15
    io_modifier (25)
        on left: 17 18 19 20 21 22 23
        on right: 7


State 0

    0 $accept: • goal $end

    error    shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    goal          go to state 4
    command_list  go to state 5
    command_line  go to state 6
    pipe_list     go to state 7
    cmd_and_args  go to state 8


State 1

    6 command_line: error • NEWLINE

    NEWLINE  shift, and go to state 9


State 2

   14 cmd_and_args: WORD • $@1 arg_list

    $default  reduce using rule 13 ($@1)

    $@1  go to state 10


State 3

    5 command_line: NEWLINE •

    $default  reduce using rule 5 (command_line)


State 4

    0 $accept: goal • $end

    $end  shift, and go to state 11


State 5

    1 goal: command_list •
    3 command_list: command_list • command_line

    error    shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    $end  reduce using rule 1 (goal)

    command_line  go to state 12
    pipe_list     go to state 7
    cmd_and_args  go to state 8


State 6

    2 command_list: command_line •

    $default  reduce using rule 2 (command_list)


State 7

    4 command_line: pipe_list • io_modifier_list background_optional NEWLINE
   12 pipe_list: pipe_list • PIPE cmd_and_args

    PIPE  shift, and go to state 13

    $default  reduce using rule 8 (io_modifier_list)

    io_modifier_list  go to state 14


State 8

   11 pipe_list: cmd_and_args •

    $default  reduce using rule 11 (pipe_list)


State 9

    6 command_line: error NEWLINE •

    $default  reduce using rule 6 (command_line)


State 10

   14 cmd_and_args: WORD $@1 • arg_list

    $default  reduce using rule 16 (arg_list)

    arg_list  go to state 15


State 11

    0 $accept: goal $end •

    $default  accept


State 12

    3 command_list: command_list command_line •

    $default  reduce using rule 3 (command_list)


State 13

   12 pipe_list: pipe_list PIPE • cmd_and_args

    WORD  shift, and go to state 2

    cmd_and_args  go to state 16


State 14

    4 command_line: pipe_list io_modifier_list • background_optional NEWLINE
    7 io_modifier_list: io_modifier_list • io_modifier

    GREAT                 shift, and go to state 17
    GREATGREAT            shift, and go to state 18
    LESS                  shift, and go to state 19
    TWOGREAT              shift, and go to state 20
    AMPERSAND             shift, and go to state 21
    GREATGREATAMPERSAND   shift, and go to state 22
    GREATAMPERSAND        shift, and go to state 23
    TWOGREATAMPERSANDONE  shift, and go to state 24

    $default  reduce using rule 10 (background_optional)

    background_optional  go to state 25
    io_modifier          go to state 26


State 15

   14 cmd_and_args: WORD $@1 arg_list •
   15 arg_list: arg_list • WORD

    WORD  shift, and go to state 27

    $default  reduce using rule 14 (cmd_and_args)


State 16

   12 pipe_list: pipe_list PIPE cmd_and_args •

    $default  reduce using rule 12 (pipe_list)


State 17

   18 io_modifier: GREAT • WORD

    WORD  shift, and go to state 28


State 18

   17 io_modifier: GREATGREAT • WORD

    WORD  shift, and go to state 29


State 19

   21 io_modifier: LESS • WORD

    WORD  shift, and go to state 30


State 20

   22 io_modifier: TWOGREAT • WORD

    WORD  shift, and go to state 31


State 21

    9 background_optional: AMPERSAND •

    $default  reduce using rule 9 (background_optional)


State 22

   19 io_modifier: GREATGREATAMPERSAND • WORD

    WORD  shift, and go to state 32


State 23

   20 io_modifier: GREATAMPERSAND • WORD

    WORD  shift, and go to state 33


State 24

   23 io_modifier: TWOGREATAMPERSANDONE •

    $default  reduce using rule 23 (io_modifier)


State 25

    4 command_line: pipe_list io_modifier_list background_optional • NEWLINE

    NEWLINE  shift, and go to state 34


State 26

    7 io_modifier_list: io_modifier_list io_modifier •

    $default  reduce using rule 7 (io_modifier_list)


State 27

   15 arg_list: arg_list WORD •

    $default  reduce using rule 15 (arg_list)


State 28

   18 io_modifier: GREAT WORD •

    $default  reduce using rule 18 (io_modifier)


State 29

   17 io_modifier: GREATGREAT WORD •

    $default  reduce using rule 17 (io_modifier)


State 30

   21 io_modifier: LESS WORD •

    $default  reduce using rule 21 (io_modifier)


State 31

   22 io_modifier: TWOGREAT WORD •

    $default  reduce using rule 22 (io_modifier)


State 32

   19 io_modifier: GREATGREATAMPERSAND WORD •

    $default  reduce using rule 19 (io_modifier)


State 33

   20 io_modifier: GREATAMPERSAND WORD •

    $default  reduce using rule 20 (io_modifier)


State 34

    4 command_line: pipe_list io_modifier_list background_optional NEWLINE •

    $default  reduce using rule 4 (command_line)
